<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.wsu.edemasensor_android.RecordingSetupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/subject_id_text"
        android:id="@+id/subjectIdText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subjectIdField"
        android:layout_below="@+id/subjectIdText"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/experiment_id_text"
        android:id="@+id/experimentIdText"
        android:layout_below="@+id/subjectIdField"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/experimentIdField"
        android:layout_below="@+id/experimentIdText"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/subjectIdField"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_text"
        android:id="@+id/activityText"
        android:layout_below="@+id/experimentIdField"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activitySpinner"
        android:layout_below="@+id/activityText"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        android:entries="@array/activity_spinner_array"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_recording_button_text"
        android:id="@+id/startRecordingButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/activitySpinner"
        android:clickable="true"
        android:onClick="onClickStartRecording" />
</RelativeLayout>
